Инлайн-картинка превращена в png, убрана предположительно ненужная svg

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "url": "https://github.com/chrstnv/Performance__2019/issues"
   },
   "homepage": "https://github.com/chrstnv/Performance__2019#readme",
-  "devDependencies": {
-    "webpack": "^4.41.2"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
